src/components/exercise/style.css
.form-title {
    margin: 2rem;
}

.form {
    background-color: white;
    display: flex;
    flex-direction: column;
    gap: 1rem;
    padding: 2rem;
    border-radius: 3px;
    border: #4b4b56 solid 5px;
}

.exercise-list {
    width: 400px;
}

.exercise {
    display: inline-block;
    margin-top: 1rem;
    border: #4b4b56 solid 1px;
    padding: 1rem;
    width: 700px;
    border-radius: 3px;
}

.exercise h1 {
    margin: 0;
    margin-bottom: 1rem;
}

.objective {
    display: flex;
    align-items: center;
}

.log-list {
    display: flex;
    flex-direction: column;
    text-align: start;
}

.log-list p:hover {
    cursor: pointer;
    text-decoration: underline;
}

